<resources>
    <string name="app_name">MyBroadcastReceiver</string>
    <string name="ini_aplikasi_sms_receiver">Ini Aplikasi Sms Receiver</string>
    <string name="download_a_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="oii_main_kesini_jadi_ngga_sekarang_yak">Oii, main kesini jadi ngga? sekarang yak.</string>
    <string name="tutup">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
</resources>
