<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sms_reciever"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.dicoding.mybroadcastreceiver.SmsReceiverActivity">
    <TextView
        android:id="@+id/tv_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coming_from"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oii_main_kesini_jadi_ngga_sekarang_yak"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="end"
        android:text="@string/tutup"/>
</LinearLayout>
